--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <h1>{% include "_brandname.html" %}</h1>
-        <p class="lead">An Awesome Tagline Goes Here</p>
+        <p class="lead">linking crowdsourcing, blockchain and language research</p>
       </div>
     </div>
   </div>
@@ -27,26 +27,26 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <h2>Meet The Team</h2>
-        <p class="lead">The Wonderful People Behind the Site</p>
+        <h2>The team</h2>
+        <p class="lead">Open source project initialised at ACDH, Vienna</p>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4">
         <div class="text-center"><img class="img-circle centered" src="http://lorempixel.com/128/128/people/9/" alt="profile pic"></div>
-        <p class="heavy text-center">Cassidy Coder</p>
+        <p class="heavy text-center">Daniel</p>
         <h2>Front-end developer</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
       </div>
       <div class="col-lg-4">
         <div class="text-center"><img class="img-circle centered" src="http://lorempixel.com/128/128/people/2/" alt="profile pic"></div>
-        <p class="heavy text-center">James King</p>
+        <p class="heavy text-center">Amelie</p>
         <h2>CEO</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
       </div>
       <div class="col-lg-4">
         <div class="text-center"><img class="img-circle centered" src="http://lorempixel.com/128/128/people/1/" alt="profile pic"></div>
-        <p class="heavy text-center">Kate Lamport</p>
+        <p class="heavy text-center">Eveline</p>
         <h2>Front-end designer</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
       </div>
@@ -62,12 +62,9 @@
         <div id="address" class="col-md-4">
           <h2>Our Location</h2>
           <address>
-            <strong>Edge Solutions Ltd.</strong><br>
-            Taj Mahal<br>
-            Agra<br>
-            Uttar Pradesh<br>
-            India - 282001<br>
-            <abbr>P:</abbr> +91 0562 222 6431
+            <strong>Wohlebengasse 12-14</strong><br>
+            1040 Vienna<br>
+            <abbr>E:</abbr> daniel.mcdonald@oeaw.ac.at
           </address>
         </div>
         <div id="map-container" class="col-md-8"></div>
@@ -83,7 +80,7 @@
 
    function init_map() {
      // Enter the latitude and longitude of your office here
-	 var myLocation = new google.maps.LatLng(27.176141, 78.042370);
+	 var myLocation = new google.maps.LatLng(48.196451, 16.373561);
 
      var mapOptions = {
           center: myLocation,
