--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -124,7 +124,7 @@
             <div class="footer">
         <div class="row">
           <div class="col-lg-6">
-              <p>&copy; Company {% now 'Y' %}</p>
+              <p>&copy; wugsy/ACDH {% now 'Y' %}</p>
           </div>
           <div class="col-lg-6 text-right">
             Connect with us on
