--- a/src/templates/_navbar.html
+++ b/src/templates/_navbar.html
@@ -1,3 +1,6 @@
 <li {% if active_link == "home" %}class="active"{% endif %}><a href="{% url 'home' %}">Home</a></li>
-<li {% if active_link == "about" %}class="active"{% endif %}><a href="{% url 'about' %}">About</a></li>
-<li {% if active_link == "about" %}class="active"{% endif %}><a href="{% url 'game' %}">Game</a></li>
+<li {% if active_link == "about" %}class="active"{% endif %}><a title="Play a language game for crypto" href="{% url 'play' %}">Game</a></li>
+<li {% if active_link == "about" %}class="active"{% endif %}><a title="Engage with our qeustionnaire" href="{% url 'questionnaire' %}">Questionnaire</a></li>
+<li {% if active_link == "about" %}class="active"{% endif %}><a title="Experience some user stories" href="{% url 'stories' %}">Stories</a></li>
+<li {% if active_link == "about" %}class="active"{% endif %}><a title="See what we can do with our data" href="{% url 'insights' %}">Insights</a></li>
+<li {% if active_link == "about" %}class="active"{% endif %}><a title="About our team" href="{% url 'about' %}">About</a></li>
