--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -56,17 +56,21 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% block navbar-right %}
+              {% if not user.is_authenticated %}
+            <a class="btn btn-default" href="{% url 'accounts:login' %}" role="button">Log in</a>
+            <a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">Sign up</a>
+              {% endif %}
+
               {% if user.is_authenticated %}
                 {% if user.is_staff %}
                 <li><a href="{% url 'admin:index' %}">Admin</a></li>
                 {% endif %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle profile-menu" data-toggle="dropdown">
-			<img src="{% thumbnail user.profile.picture|default:'default_profile.png' 30x30 crop %}" alt="" />
-			{{ user.get_full_name|truncatechars:20 }}
-			<span class="caret"></span>
-		    </a>
-		    
+              			  <img src="{% thumbnail user.profile.picture|default:'default_profile.png' 30x30 crop %}" alt="" />
+              			  {{ user.get_full_name|truncatechars:20 }}
+              			  <span class="caret"></span>
+              		  </a>
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="{% url 'profiles:show_self' %}">Profile</a></li>
                     <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
