--- a/src/templates/questionnaire.html
+++ b/src/templates/questionnaire.html
@@ -59,6 +59,11 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% block navbar-right %}
+              {% if not user.is_authenticated %}
+               <a class="btn btn-default" href="{% url 'accounts:login' %}" role="button">Log in</a>
+                <a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">Sign up</a>
+              {% endif %}
+            
               {% if user.is_authenticated %}
                 {% if user.is_staff %}
                 <li><a href="{% url 'admin:index' %}">Admin</a></li>
