--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -26,6 +26,7 @@
           <h1>{% include "_brandname.html" %}</h1>
           <p>Decentralised and crowdsourced language data</p>
 	  <a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">Sign up and earn real crypto!</a>
+    <a class="btn btn-success" href="{% url 'tour' %}" role="button">Take the tour</a>
         </div>
         <div class="col-md-4 col-sm-4">
 
