site showed up again therefore immediate commit

--- a/src/templates/tour.html
+++ b/src/templates/tour.html
@@ -16,7 +16,7 @@
 </div>
 <div>
     <span>
-        <a class="btn btn-primary" href="{% url 'game:play' %}" role="button">Language games</a>
+        <a class="btn btn-primary" href="{% url 'game' %}" role="button">Language games</a>
         <a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">Questionnaires</a>
         <a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">Data exploration</a>
         <a class="btn btn-primary" href="{% url 'accounts:signup' %}" role="button">User stories</a>
