--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -177,3 +177,127 @@ body>.navbar-transparent {
 .form-box form .form-control:focus {
   z-index: 2;
 }
+
+/* Game Styles */
+
+#game-space {
+    text-align: center;
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome and Opera */
+}
+
+#intro {
+    padding: 20px;
+    margin: 18px auto;
+    background: #fafafa;
+    border-radius: 5px;
+    position: relative;
+    display: inline-block;
+    font-weight: 500;
+}
+
+#button-start {
+    border: 1px solid gray;
+    border-bottom: 3px solid gray;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 18px auto;
+    position: relative;
+    display: inline-block;
+}
+
+/* Game00 */
+
+#button-restart.game00 {
+    border: 1px solid gray;
+    border-bottom: 3px solid gray;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 18px auto;
+    position: relative;
+    display: inline-block;
+}
+
+#button-next.game00 {
+    border: 1px solid gray;
+    border-bottom: 3px solid gray;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 18px auto;
+    position: relative;
+    display: inline-block;
+}
+
+.div-button {
+    border: 1px solid gray;
+    border-bottom: 3px solid gray;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 18px auto;
+    position: relative;
+    display: inline-block;
+}
+.div-button:hover {
+    cursor: pointer;
+    border-bottom: 1px solid gray!important;
+    margin-bottom: 2px;
+}
+
+#cards-space.game00 {
+    width: 80%;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    vertical-align: top;
+    text-align: center;
+}
+
+.card {
+    width: 22%;
+    margin: 4px 1%;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 4px;
+    display: inline-block;
+    vertical-align: top;
+}
+.card:hover {
+    cursor: pointer;
+}
+
+.card.marked-term-r1 {
+    background: gray;
+}
+
+.card.marked-term-r1.one {background: yellow;!important}
+.card.marked-term-r1.two {background: green;!important}
+.card.marked-term-r1.three {background: red;!important}
+
+.card.marked-term-r2 {
+    border: 3px solid black;
+}
+
+#box-concept.game00 {
+    padding: 40px;
+    margin: 22px auto;
+    background: #f0f0f0;
+    border-radius: 5px;
+    position: relative;
+    display: block;
+    max-width: 200px;
+    font-weight: 500;
+}
+
+#debugger {
+    position: relative;
+    padding-top: 40px;
+    border: 1px solid red;
+}
