create an app for dictionary

--- a/src/templates/_navbar.html
+++ b/src/templates/_navbar.html
@@ -4,4 +4,5 @@
 <li {% if active_link == "stories" %}class="active"{% endif %}><a title="Experience some user stories" href="{% url 'stories' %}">Stories</a></li>
 <li {% if active_link == "insights" %}class="active"{% endif %}><a title="See what we can do with our data" href="{% url 'insights' %}">Insights</a></li>
 <li {% if active_link == "visual" %}class="active"{% endif %}><a title="See what we can do with our data" href="{% url 'visual' %}">Visualisation</a></li>
+<li {% if active_link == "dictionary" %}class="active"{% endif %}><a title="See what we can do with our data" href="{% url 'dictionary' %}">Dictionary</a></li>
 <li {% if active_link == "about" %}class="active"{% endif %}><a title="About our team" href="{% url 'about' %}">About</a></li>
