- Basic Game01 structure created - WIP differentiating between playing Game00 and Game01 (right now it’s a hack to go always to Game01)

--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -164,6 +164,7 @@
               //console.log('Below is validated game JSON, which should be interpretable')
               //console.log(e);
               // now, you can call the code that builds and inserts a game
+              e.game_type = 1; // YADA YADA FIX THIS HACK!
               buildGame(e)
               // here, have the json on screen :)
               //var jsonData = '<code align="left">' + JSON.stringify(e, null, 4) + '</code>'
