--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -4,6 +4,14 @@ html, body{
     height:100%;		/* For full height images */
 }
 
+.clearfix {
+    overflow: auto;
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 1px;
+}
+
 .starter-template {
     padding: 40px 15px;
     text-align: center;
@@ -242,7 +250,7 @@ body>.navbar-transparent {
     display: inline-block;
 }
 
-.div-button {
+.div-button{
     border: 1px solid gray;
     /* border-bottom: 3px solid gray; */
     border-radius: 5px;
@@ -344,4 +352,86 @@ body>.navbar-transparent {
 }
 #timer.white {
     background: white!important;
+}
+
+
+
+/* Game 01 */
+
+#button-restart.game01 {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border: 1px solid gray;
+    /* border-bottom: 3px solid gray; */
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 18px auto;
+    position: relative;
+    display: inline-block;
+}
+
+#button-submit.game01 {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border: 1px solid gray;
+    /* border-bottom: 3px solid gray; */
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 18px auto;
+    margin-bottom: 10px;
+    position: relative;
+    display: inline-block;
+}
+
+#photo-space.game01 {
+    width: 48%;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+    display: inline-block;
+    position: relative;
+    margin: 0 auto;
+    float: left;
+    vertical-align: top;
+    text-align: center;
+}
+
+#photo-box.game01 {
+    max-width: 100%;
+    max-height: 300px;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+#photo-box.game01 > img {
+    max-width: 100%;
+}
+
+#action-space.game01 {
+    width: 48%;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+    display: inline-block;
+    position: relative;
+    margin: 0 auto;
+    float: right;
+    vertical-align: top;
+    text-align: center;
+}
+
+#under-tab-space.game01 {
+    width: 100%;
+    border: 1px solid #e7e7e7;
+    border-radius: 0px 0px 5px 5px;
+    border-top: 0px;
+    padding: 10px;
+    display: inline-block;
+    position: relative;
+    margin: 0 auto;
+    float: right;
+    vertical-align: top;
+    text-align: center;
 }
