--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -422,16 +422,45 @@ body>.navbar-transparent {
     text-align: center;
 }
 
-#under-tab-space.game01 {
+#under-tab-space-paragraph.game01,
+#under-tab-space-textbox.game01,
+#under-tab-space-visualization.game01 {
     width: 100%;
     border: 1px solid #e7e7e7;
     border-radius: 0px 0px 5px 5px;
     border-top: 0px;
-    padding: 10px;
+    padding: 20px 10px;
     display: inline-block;
     position: relative;
     margin: 0 auto;
     float: right;
     vertical-align: top;
     text-align: center;
+}
+
+#paragraph-content.game01 {
+    border: 1px solid #e7e7e7;
+    border-radius: 5px;
+    max-height: 120px;
+    overflow: scroll;
+    text-align: left;
+    padding: 12px;
+}
+
+#textarea.game01 {
+    width: 100%;
+    height: 80px;
+    padding: 12px;
+    margin: 5px auto;
+    border: 1px solid #e7e7e7;
+}
+
+#viz-box.game01 {
+    overflow: hidden;
+    width: 100%;
+    max-width: 100%;
+    height: 300px;
+    max-height: 300px;
+    margin: 10px auto;
+    margin-top: 24px;
 }
