--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -149,7 +149,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
     <script src="{% static 'site/js/libs/jquery.connections.js' %}"></script>
+    <script src="{% static 'site/js/libs/cloud.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'site/js/game.js' %}"></script>
     {% block scripts %}
