--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -158,6 +158,7 @@
     <script>
     $('#get-game').submit(function(e){
     e.preventDefault();
+    var gameType = $(this).find("input[type=submit]:focus").val();
         $.ajax({
             url:{% url 'generate_data' %},
             type:'post',
@@ -166,7 +167,8 @@
               //console.log('Below is validated game JSON, which should be interpretable')
               //console.log(e);
               // now, you can call the code that builds and inserts a game
-              e.game_type = 1; // YADA YADA FIX THIS HACK!
+              if(gameType.indexOf("00") > -1){e.game_type = 0;}
+              else if(gameType.indexOf("01") > -1){e.game_type = 1;}
               buildGame(e)
               // here, have the json on screen :)
               //var jsonData = '<code align="left">' + JSON.stringify(e, null, 4) + '</code>'
